#3 - Bump to Java 11 and use System.Logger